--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,56 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# ── Dependencies / package managers
+node_modules/
+.pnp/
 .pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
+!.yarn/sdks
 !.yarn/versions
 
-# testing
-/coverage
+# ── Build outputs & caches
+.next/
+out/
+dist/
+build/
+.cache/
+.turbo/
+.vercel/
 
-# next.js
-/.next/
-/out/
+# ── Testing / coverage
+coverage/
+.jest/
+.jest-cache/
 
-# production
-/build
+# ── TypeScript artifacts
+*.tsbuildinfo
+# Note: keep next-env.d.ts committed
 
-# misc
-.DS_Store
-*.pem
+# ── Environment files (commit only an example)
+.env
+.env.*
+!.env.example
 
-# debug
+# ── Logs / debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# ── OS cruft
+.DS_Store
+Thumbs.db
 
-# vercel
-.vercel
+# ── Editors / IDEs
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+.idea/
+*.code-workspace
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ── Supabase (local CLI artifacts)
+supabase/.temp
+supabase/.branches
+supabase/.cache
